fix breakpoint for navbar collapse

--- a/css/custom.css
+++ b/css/custom.css
@@ -17,7 +17,7 @@ nav {
   background-color: #FFF !important;
   border: 0 !important;
   margin: 0 !important;
-  padding: 0.5em;
+  padding: 5px 25px;
 }
 
 nav ul {
@@ -36,7 +36,7 @@ nav a:hover {
 
 nav img {
   height: 28px;
-  margin-left: 1em;
+  /*margin-left: 1em;*/
 }
 
 /*Page Content*/
@@ -52,4 +52,43 @@ img {
 
 .row {
   margin: 0 !important;
+}
+
+/*Media Queries*/
+
+@media only screen and (max-width: 1065px) {
+  .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
